swapped out HTML

--- a/index.html
+++ b/index.html
@@ -4,90 +4,62 @@
     <title>Elastic Beanstalk</title>
     <style>
       body {
-        color: #ffffff;
-        font-family: Arial, sans-serif;
-        font-size:14px;
-        -moz-transition-property: text-shadow;
-        -moz-transition-duration: 4s;
-        -webkit-transition-property: text-shadow;
-        -webkit-transition-duration: 4s;
-        text-shadow: none;
-      }
-      body.blurry {
-        -moz-transition-property: text-shadow;
-        -moz-transition-duration: 4s;
-        -webkit-transition-property: text-shadow;
-        -webkit-transition-duration: 4s;
-        text-shadow: #fff 0px 0px 25px;
-      }
-      a {
-        color: #55aaff;
-      }
-      .textColumn, .linksColumn {
-        padding: 2em;
-      }
-      .textColumn {
-        position: absolute;
-        top: 0px;
-        right: 50%;
-        bottom: 0px;
-        left: 0px;
-
-        text-align: right;
-        padding-top: 11em;
-        background-color: #73A53E;
-
-      }
-      .textColumn p {
-        width: 75%;
-        float:right;
-      }
-      .linksColumn {
-        position: absolute;
-        top:0px;
-        right: 0px;
-        bottom: 0px;
-        left: 50%;
-
-        background-color: #33342D;
-      }
-
-      h1 {
-        color: #33342D;
-        font-size: 500%;
-        font-weight: normal;
-        margin-bottom: 0em;
-      }
-      h2 {
-        font-size: 200%;
-        font-weight: normal;
-        margin-bottom: 0em;
-      }
-      ul {
-        padding-left: 1em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         margin: 0px;
       }
-      li {
-        margin: 1em 0em;
+
+      #interactive-container {
+        width: 950px;
+        height: 768px;
+        border: 1px solid blue;
+        overflow-y: scroll;
+      }
+
+      #form-container {
+        display: flex;
+        gap: 30px;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 30px;
+        background-color: #eee;
+      }
+
+      #pdf-container {
+        position: relative;
+      }
+
+      #pdf-canvas {
+        width: 100%;
+        border-radius: 20px;
+        background-color: white;
+      }
+
+      /* Sidebar */
+      #sidebar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      button {
+        font-size: 18px;
+        padding: 20px 30px;
+        border-radius: 50px;
+        border: none;
+        background-color: #fcb42b;
       }
     </style>
   </head>
-  <body>
-    <div class="textColumn">
-      <h1>Congratulations</h1>
-      <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud</p>
-      <p>This environment is launched with Elastic Beanstalk Node.js Platform</p>
-    </div>
-    <div class="linksColumn">
-      <h2>What's Next?</h2>
-      <ul>
-        <li><a href="https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/Welcome.html">AWS Elastic Beanstalk overview</a></li>
-        <li><a href="https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/concepts.html">AWS Elastic Beanstalk concepts</a></li>
-        <li><a href="https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/create_deploy_nodejs_express.html">Deploying an Express Application to AWS Elastic Beanstalk</a></li>
-        <li><a href="https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/nodejs-express-clustering.html">Deploying an Express application with clustering to Elastic Beanstalk</a></li>
-        <li><a href="https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/create_deploy_nodejs.container.html">Customizing and Configuring a Node.js Container</a></li>
-        <li><a href="https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/using-features.logging.html">Working with Logs</a></li>
-      </ul>
-    </div>
-  </body>
+  <div id="interactive-container">
+    <form id="form-container" method="POST" action="appURL">
+      <div id="pdf-container">
+        <canvas id="pdf-canvas"></canvas>
+      </div>
+      <div id="buttons-container">
+        <button id="submit">Submit</button>
+      </div>
+    </form>
+  </div>
 </html>
