v8 - added title and imports

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Elastic Beanstalk</title>
+    <!-- Show the PDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.9.359/pdf.min.js"></script>
+    <!-- Process the PDF -->
+    <script src="https://cdn.jsdelivr.net/npm/pdf-lib@1.17.1/dist/pdf-lib.min.js"></script>
+    <title>PDF Emailer Example - Rowan</title>
     <style>
       body {
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
         margin: 0px;
@@ -52,14 +57,17 @@
       }
     </style>
   </head>
-  <div id="interactive-container">
-    <form id="form-container" method="POST" action="appURL">
-      <div id="pdf-container">
-        <canvas id="pdf-canvas"></canvas>
-      </div>
-      <div id="buttons-container">
-        <button id="submit">Submit</button>
-      </div>
-    </form>
-  </div>
+  <body>
+    <h1>PDF Emailer: AWS Version</h1>
+    <div id="interactive-container">
+      <form id="form-container" method="POST" action="appURL">
+        <div id="pdf-container">
+          <canvas id="pdf-canvas"></canvas>
+        </div>
+        <div id="buttons-container">
+          <button id="submit">Submit</button>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
