--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@
 
         // Add annotations to page
         annotations.forEach((annotation) => {
-          console.log(annotation.rect);
           if (
             annotation.subtype === "Widget" &&
             annotation.fieldType === "Tx"
@@ -129,6 +128,63 @@
       };
 
       loadPdf(url);
+    </script>
+
+    <!-- Script to process and send PDF once submitted -->
+    <script type="text/javascript">
+      //
+      // ----- populatePDF ----- //
+      //
+      const populatePDF = async (data) => {
+        // Fetch the PDF with form fields
+        const formUrl = "test.pdf";
+        const formPdfBytes = await fetch(formUrl).then((res) =>
+          res.arrayBuffer()
+        );
+
+        // Load a PDF with form fields
+        const pdfDoc = await PDFLib.PDFDocument.load(formPdfBytes);
+
+        // Get the form containing all the fields
+        const form = pdfDoc.getForm();
+
+        var tempNameField;
+        // Fill in the form
+        for (let [key, value] of data.entries()) {
+          // Get all fields in the PDF by their names
+          tempNameField = form.getTextField(key);
+          tempNameField.setText(value);
+
+          console.log(`${key}: ${value}`);
+        }
+
+        // Serialize the PDFDocument to bytes (a Uint8Array)
+        const pdfBytes = await pdfDoc.saveAsBase64();
+
+        const response = await fetch("/send-pdf", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ pdf: pdfBytes, to: "j.corbett@rowan.nyc" }),
+        });
+
+        const result = await response.text();
+        console.log(result);
+      };
+
+      document.addEventListener("DOMContentLoaded", function () {
+        // Submit listener
+        document
+          .getElementById("form-container")
+          .addEventListener("submit", function (e) {
+            e.preventDefault(); // Prevent default form submission
+
+            const formData = new FormData(this); // Grab the form data
+
+            populatePDF(formData);
+          });
+      });
     </script>
   </body>
 </html>
